--- a/src/App.css
+++ b/src/App.css
@@ -12,7 +12,7 @@
   background-size: cover;
   background-color: #541084;
 
-  padding-bottom: 5vw;
+  padding-bottom: 6vw;
 }
 
 .bodyContainer {
@@ -45,7 +45,7 @@
   align-items: flex-start;
   justify-content: center;
 
-  width: 40vw;
+
   margin-top: 1vw;
 }
 
@@ -53,13 +53,10 @@
   display: flex;
   flex-direction: column;
   border-radius: 8px;
-
-
+  align-items: center;
+  justify-content: space-around;
+  /* ou space-evenly */
   position: relative;
-
-
-
-
 }
 
 .dropsRowContainer {
@@ -147,10 +144,12 @@
   flex-direction: row;
   justify-content: center;
   align-items: center;
-  background: radial-gradient(circle 300px at center, #A567C4, #541084);
+  background: radial-gradient(circle 34vw at center, #A567C4, #541084);
   height: auto;
   width: 100%;
-  padding-top: 5vw;
+  padding-top: 7vw;
+  margin-top: 2vw;
+  padding-bottom: 7vw;
 }
 
 .MapContainer::before {
@@ -159,8 +158,20 @@
   top: -4%;
   left: 0;
   width: 100%;
-  height: 6%;
-  background: linear-gradient(to bottom, #D7D7D7 0%, #541084 100%);
+  height: 13%;
+  background: linear-gradient(to bottom, #F2F2F2 0%, #541084 70%);
+  pointer-events: none;
+}
+
+.MapContainer::after {
+  content: "";
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  height: 10%;
+
+  background: linear-gradient(to top, #8D45F6 0%, #541084 70%);
   pointer-events: none;
 }
 
@@ -182,6 +193,7 @@
 }
 
 .dropsRowContainer img {
+  height: auto;
   width: 25.7vw;
   border-radius: 8px;
   object-fit: cover;
@@ -197,8 +209,11 @@
 .dropsCardContainer {
   display: flex;
   flex-direction: row;
+  justify-content: space-around;
+  /* ou space-evenly */
   position: relative;
-
+  height: auto;
+  width: 100%;
 }
 
 .dropsFrontCardContainer {
@@ -221,7 +236,8 @@
 }
 
 .dropsFrontCardContainerimg {
-  width: 62.9vw;
+  width: 57.9vw;
+  height: 39.3vw;
 
   border-top-left-radius: 8px;
   border-top-right-radius: 8px;
@@ -260,7 +276,7 @@
 .dropsFrontCardContainerSpanCartola {
 
   position: absolute;
-  top: -185%;
+  top: -65%;
 
   display: flex;
   align-items: center;
@@ -287,13 +303,13 @@
 
 @media (max-width: 768px) {
   .dropsFrontCardContainerSpanCartola {
-    top: -210%;
+    top: -68%;
   }
 }
 
 @media (max-width: 388px) {
   .dropsFrontCardContainerSpanCartola {
-    top: -170%;
+    top: -62%;
   }
 }
 
@@ -602,7 +618,7 @@
 .dropsImage {
   margin-top: 2vw;
   align-self: flex-start;
-  margin-left: 5vw;
+  margin-left: 7vw;
   height: 10vw;
 }
 
@@ -611,10 +627,13 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  background-color: #D7D7D7;
+  background-color: #F2F2F2;
+  background-image: url('./AssetDrops/fundoProg.jpg');
+  background-repeat: no-repeat;
+  background-size: cover;
   height: auto;
   width: 100%;
-  padding-bottom: 5vw;
+  padding-bottom: 7vw;
 }
 
 .progContainerRow {
@@ -689,8 +708,8 @@
   top: 0;
   left: 0;
   width: 100%;
-  height: 15%;
-  background: linear-gradient(to bottom, #541084 0%, #D7D7D7 70%);
+  height: 25%;
+  background: linear-gradient(to bottom, #541084 0%, #F2F2F2 50%);
   pointer-events: none;
 }
 
@@ -706,5 +725,125 @@
 
 .marginDiv {
   margin-top: 1vw;
+}
+
+
+.promoContainer {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  height: auto;
+  width: 100%;
+  background-image: url('./AssetDrops/fundoPromo.png');
+  background-repeat: no-repeat;
+  background-size: cover;
+  margin-inline: 1vw;
+  padding-top: 5vw;
+
+
+}
+
+.promoContainer span {
+  color: #541084;
+  font-family: 'Rubik', sans-serif;
+  font-size: 0.8vw;
+  font-style: normal;
+  font-weight: 400;
+  line-height: normal;
+  z-index: 5;
+  padding: 0.2vw;
+}
+
+.promoContainerRow {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;
+  width: auto;
+  height: auto;
+  margin-inline: 1vw;
+  padding-top: 1vw;
+}
+
+.promoActorRow {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: space-between;
+  width: 100%;
+  height: auto;
+}
+
+.promoCardBig {
+  width: auto;
+  height: 27vw;
+  background-color: white;
+  border-radius: 10px;
+  box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.2);
+}
+
+.promoActorRow img {
+  width: auto;
+  height: 50vw;
+  object-fit: contain;
+
+}
+
+.promoCardBig img {
+  width: auto;
+  height: 27vw;
+  border-radius: 10px;
+}
+
+.promoCardSmall {
+  width: auto;
+  height: 11.9vw;
+  background-color: white;
+  margin: 0 0.5vw;
+  border-radius: 10px;
+  overflow: hidden;
+  box-shadow: 0px 5px 8px rgba(0, 0, 0, 0.2);
+}
+
+.promoCardSmall img {
+  width: auto;
+  height: 11.9vw;
+  border-radius: 10px;
+}
+
+.promoContainerColumn {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  width: auto;
+  margin-inline: 1vw;
+}
+
+.promoCardBig,
+.promoCardSmall {
+  position: relative;
+
+}
+
+.cartolaAbsolute {
+  position: absolute;
+  top: 0;
+  left: 0;
+
+  background-color: yellow;
+  border-radius: 24px;
+  z-index: 5;
+  margin: 0.5rem;
+}
+
+.textProgImg {
+  width: auto;
+  /* ajuste conforme necessário */
+  height: 10vw;
+  /* ajuste conforme necessário */
+  align-self: start;
+  margin-left: 2vw;
 
 }
