--- a/src/App.css
+++ b/src/App.css
@@ -38,25 +38,21 @@
 }
 
 .dropsContainer {
-
-
   display: flex;
   flex-direction: row;
   align-items: flex-start;
   justify-content: center;
-
-
   margin-top: 1vw;
+  width: auto;
+  height: auto;
 }
 
 .dropsContainerNoticias {
   display: flex;
   flex-direction: column;
   border-radius: 8px;
-  align-items: center;
-  justify-content: space-around;
-  /* ou space-evenly */
-  position: relative;
+
+
 }
 
 .dropsRowContainer {
@@ -74,7 +70,6 @@
   flex-direction: column;
   align-items: center;
   justify-content: center;
-
   width: auto;
 }
 
@@ -193,17 +188,17 @@
 }
 
 .dropsRowContainer img {
-  height: auto;
-  width: 25.7vw;
+  height: 15vw;
+  width: 24.4vw;
   border-radius: 8px;
   object-fit: cover;
   overflow: hidden;
   object-fit: contain;
-
 }
 
 .first-row {
   margin-bottom: 5.5vw;
+  width: 24.4vw;
 }
 
 .dropsCardContainer {
@@ -222,9 +217,7 @@
   flex-direction: column;
   box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.2);
   margin-right: 2vw;
-  /* Ajuste conforme necessário */
 
-  /* Ajuste conforme necessário */
 }
 
 
@@ -236,12 +229,12 @@
 }
 
 .dropsFrontCardContainerimg {
-  width: 57.9vw;
+  width: 63.6vw;
   height: 39.3vw;
 
   border-top-left-radius: 8px;
   border-top-right-radius: 8px;
-  object-fit: cover;
+
 
 }
 
@@ -271,6 +264,7 @@
   color: #541084;
   text-align: center;
   z-index: 5;
+  margin-inline: 2vw;
 }
 
 .dropsFrontCardContainerSpanCartola {
@@ -296,9 +290,6 @@
   font-weight: 400;
   line-height: normal;
   position: absolute;
-
-
-
 }
 
 @media (max-width: 768px) {
@@ -309,7 +300,7 @@
 
 @media (max-width: 388px) {
   .dropsFrontCardContainerSpanCartola {
-    top: -62%;
+    top: -68%;
   }
 }
 
@@ -618,7 +609,7 @@
 .dropsImage {
   margin-top: 2vw;
   align-self: flex-start;
-  margin-left: 7vw;
+  margin-left: 5vw;
   height: 10vw;
 }
 
@@ -739,7 +730,7 @@
   background-repeat: no-repeat;
   background-size: cover;
   margin-inline: 1vw;
-  padding-top: 5vw;
+  padding-top: 2vw;
 
 
 }
@@ -847,3 +838,108 @@
   margin-left: 2vw;
 
 }
+
+.top10Container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  height: auto;
+  width: 100%;
+  background-color: #21CDD1;
+
+}
+
+.imgTop10 {
+  width: 45vw;
+  height: 15vw;
+  object-fit: cover;
+  align-self: flex-start;
+  margin-left: 5vw;
+  margin-bottom: 2vw;
+}
+
+.top10CardsContainer {
+  position: relative;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.mainCard {
+  position: relative;
+  width: 40vw;
+  height: 20vw;
+  background-color: white;
+  border-radius: 2vw;
+  margin-block: 20vw;
+}
+
+.smallCard {
+  position: absolute;
+
+  width: 20vw;
+  height: 10vw;
+
+  background-color: white;
+  border-radius: 1vw;
+
+}
+
+.smallCard1 {
+  left: 105%;
+  top: 50%;
+
+}
+
+.smallCard2 {
+  left: 105%;
+  top: -35%;
+  width: 25vw;
+  height: 15vw;
+}
+
+.smallCard3 {
+  left: 50%;
+  top: -60%;
+}
+
+.smallCard4 {
+  width: 25vw;
+  height: 15vw;
+  left: -18%;
+  top: -85%;
+}
+
+.smallCard5 {
+  width: 22vw;
+  height: 12vw;
+  left: -60%;
+  top: 0%;
+}
+
+.smallCard6 {
+  left: -55%;
+  top: 70%;
+}
+
+.smallCard7 {
+  width: 22vw;
+  height: 12vw;
+
+  left: 0%;
+  top: 110%;
+}
+
+.smallCard8 {
+  left: 60%;
+  top: 110%;
+}
+
+.smallCard9 {
+  left: 115%;
+  top: 110%;
+  width: 19vw;
+  height: 9vw;
+}
+
