--- a/src/NoticiaDetalhe.css
+++ b/src/NoticiaDetalhe.css
@@ -1,27 +1,136 @@
+.MenuContainerHeader {
+    background-color: #d7d7d767;
+}
+
+.App-headerN {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: #541084;
+    padding-top: 4vw;
+
+}
+
+.divMenu {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: #FFC007;
+    height: 4vw;
+    width: 100%;
+    position: relative;
+}
+
+.socialIcons {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    position: absolute;
+    right: 5vw;
+}
+
+.menuDiv {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+}
+
+.App-headerN span {
+    color: #541084;
+    font-family: 'Rubik', sans-serif;
+    font-size: calc(1.25vw + 0.2vw);
+    /* Ajuste conforme necessário */
+    font-style: normal;
+    font-weight: 500;
+    line-height: normal;
+    margin-inline: 1.5vw;
+
+}
+
+
+.App-headerN img {
+    position: absolute;
+    width: 22vw;
+    height: 11vw;
+    z-index: 22;
+    margin-right: 2vw;
+    left: 4vw;
+    top: 0vw;
+
+}
+
+@media (min-width: 320px) {
+    .App-headerN img {
+        transform: scale(0.8);
+    }
+}
+
+.ContainerRowN {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+}
+
+.ContainerRowN img {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+}
+
+.ContainerRowN span {
+    color: #FFF;
+    font-family: 'Rubik', sans-serif;
+    font-size: calc(1.25vw + 0.2vw);
+    /* Ajuste conforme necessário */
+    font-style: normal;
+    font-weight: 400;
+    line-height: normal;
+    margin-inline: 1.5vw;
+}
+
+.InnerContainerRowN {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: auto;
+}
+
 .noticiasContainer {
     display: flex;
     flex-direction: column;
 
-    width: 66vw;
+    width: 68vw;
     padding: 0 20px;
-    padding-left: 8vw;
+    padding-left: 6vw;
+}
+
+@media (max-width: 329px) {
+    .noticiasContainer {
+   
+        width: 70vw;
+       
+    }
 }
 
 h1 {
     color: #541084;
 
     font-family: Rubik;
-    font-size: 40px;
+    font-size: 2vw;
     font-style: normal;
     font-weight: 700;
     line-height: normal;
+    padding-top: 5vw;
 }
 
 h2 {
     color: #2B2B2B;
 
     font-family: 'Rubik', sans-serif;
-    font-size: 20px;
+    font-size: 1.5vw;
     font-style: normal;
     font-weight: 500;
     line-height: normal;
@@ -30,7 +139,7 @@ h2 {
 .descImage {
     color: #2B2B2B;
     font-family: 'Rubik', sans-serif;
-    font-size: 12px;
+    font-size: 2vw;
     font-style: normal;
     font-weight: lighter;
     opacity: 0.8;
@@ -51,7 +160,7 @@ img {
 .meu-conteudo a {
     color: #541084;
     font-family: 'Rubik', sans-serif;
-    font-size: 20px;
+    font-size: 1.8vw;
     font-style: normal;
     font-weight: 400;
     line-height: 107.835%;
@@ -69,10 +178,10 @@ img {
 }
 
 .meu-conteudo p {
-    font-size: 16px;
+
     color: #2B2B2B;
     font-family: 'Rubik', sans-serif;
-    font-size: 20px;
+    font-size: 1.6vw;
     font-style: normal;
     font-weight: 500;
     line-height: normal;
@@ -87,13 +196,23 @@ img {
 .meu-conteudo strong {
     color: #541084;
     font-family: 'Rubik', sans-serif;
-    font-size: 18px;
+    font-size: 1.5vw;
+
     font-style: normal;
     font-weight: 700;
     line-height: 107.835%;
 }
 
-.meu-conteudo iframe {
-    max-width: 100%;
+
+
+.youtube-iframe {
+    height: 40vw;
+    width: 100%;
+    border-radius: 10px;
+}
+
+.spotify-iframe {
+    overflow: hidden;
+    width: 100%;
     border-radius: 10px;
 }
