--- a/src/App.css
+++ b/src/App.css
@@ -383,12 +383,14 @@
 
   justify-content: center;
   position: relative;
+
+
 }
 
 
 .App-Player {
   position: fixed;
-  top: -1.2vw;
+  top: -1.3vw;
   z-index: 9999;
 
   background-color: #541084;
@@ -404,53 +406,62 @@
   padding-block: 0.5vw;
   border-bottom-right-radius: 10px;
   border-bottom-left-radius: 10px;
+  transform: scale(0.6);
 
 
 }
-@media (min-width: 320px) {
-  .App-Player {
-    transform: scale(0.6);
-  }
-}
-@media (min-width: 561px) {
-  .App-Player {
-    transform: scale(0.7);
-  }
-}
 
-@media (min-width: 754px) {
+@media (min-width: 320px) and (max-width: 560px) {
   .App-Player {
     transform: scale(0.6);
   }
 }
 
-@media (min-width: 768px) {
-  .App-Player {
-    transform: scale(0.7);
-  }
-}
-
-@media (min-width: 820px) {
+@media (min-width: 561px) and (max-width: 753px) {
   .App-Player {
     transform: scale(0.6);
   }
 }
 
-@media (min-width: 989px) {
-  .App-Player {
-    transform: scale(0.7);
-  }
-}
-
-@media (min-width: 1024px) {
+@media (min-width: 754px) and (max-width: 820px) {
   .App-Player {
     transform: scale(0.6);
   }
 }
 
-@media (min-width: 1207px) {
+@media (min-width: 820px) and (max-width: 859px) {
+  .App-Player {
+    transform: scale(0.62);
+  }
+}
+
+@media (min-width: 860px) and (max-width: 988px) {
+  .App-Player {
+    transform: scale(0.62);
+  }
+}
+
+@media (min-width: 989px) and (max-width: 1023px) {
+  .App-Player {
+    transform: scale(0.62);
+  }
+}
+
+@media (min-width: 1024px) and (max-width: 1160px) {
   .App-Player {
     transform: scale(0.65);
+  }
+}
+
+@media (min-width: 1161px) and (max-width: 1206px) {
+  .App-Player {
+    transform: scale(0.68);
+  }
+}
+
+@media (min-width: 1207px) and (max-width: 1439px) {
+  .App-Player {
+    transform: scale(0.6);
   }
 }
 
@@ -925,7 +936,7 @@
   height: 15vw;
   object-fit: cover;
   align-self: flex-start;
-  margin-left: 5vw;
+  margin-left: 2vw;
   margin-bottom: 2vw;
 }
 
@@ -943,6 +954,14 @@
   background-color: white;
   border-radius: 2vw;
   margin-block: 20vw;
+
+}
+
+.mainCard img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  overflow: hidden;
 }
 
 .smallCard {
@@ -954,6 +973,21 @@
   background-color: white;
   border-radius: 1vw;
 
+}
+
+.mainCard img:hover,
+.smallCard hover {
+  transform: scale(1.1);
+  transition: transform 0.3s ease-in-out;
+}
+
+
+
+.smallCard img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  max-width: 100%;
 }
 
 .smallCard1 {
