--- a/src/App.css
+++ b/src/App.css
@@ -51,8 +51,6 @@
   display: flex;
   flex-direction: column;
   border-radius: 24px;
-
-
 }
 
 .dropsRowContainer {
@@ -63,7 +61,6 @@
   width: auto;
   height: auto;
   position: relative;
-
 }
 
 .dropsColumnContainer {
@@ -132,6 +129,7 @@
     bottom: 9%;
   }
 }
+
 
 
 .MapContainer {
@@ -242,12 +240,9 @@
 }
 
 .dropsFrontCardContainerDiv {
-
   position: absolute;
   bottom: 0%;
-
   width: 100%;
-
   background: white;
   border-top: 0.5vw solid #ffc007;
   /* Adiciona uma borda amarela de 2px na parte superior */
@@ -256,8 +251,6 @@
   display: flex;
   align-items: center;
   justify-content: center;
-
-
 }
 
 .dropsFrontCardContainerSpan {
@@ -332,7 +325,7 @@
 .App-header {
   text-align: center;
   display: flex;
-  padding-top: 5vw;
+  margin-top: 3vw;
   flex-direction: column;
 
   margin-inline: 4vw;
@@ -355,7 +348,7 @@
   display: flex;
   justify-content: space-around;
   align-items: center;
-  width: auto;
+  width: 100%;
 }
 
 .ContainerRow span {
@@ -390,7 +383,7 @@
 
 .App-Player {
   position: fixed;
-  top: -1.3vw;
+  top: -.3vw;
   z-index: 9999;
 
   background-color: #541084;
@@ -411,63 +404,64 @@
 
 }
 
-@media (min-width: 320px) and (max-width: 560px) {
+@media (max-width: 600px) {
   .App-Player {
-    transform: scale(0.6);
+    transform: scale(0.9);
+    top: -.45vw;
   }
 }
 
-@media (min-width: 561px) and (max-width: 753px) {
+@media (min-width: 601px) and (max-width: 854px) {
   .App-Player {
-    transform: scale(0.6);
+    transform: scale(0.9);
   }
 }
 
-@media (min-width: 754px) and (max-width: 820px) {
+@media (min-width: 854px) and (max-width: 820px) {
   .App-Player {
-    transform: scale(0.6);
+    transform: scale(0.9);
   }
 }
 
 @media (min-width: 820px) and (max-width: 859px) {
   .App-Player {
-    transform: scale(0.62);
+    transform: scale(0.92);
   }
 }
 
 @media (min-width: 860px) and (max-width: 988px) {
   .App-Player {
-    transform: scale(0.62);
+    transform: scale(0.92);
   }
 }
 
 @media (min-width: 989px) and (max-width: 1023px) {
   .App-Player {
-    transform: scale(0.62);
+    transform: scale(0.92);
   }
 }
 
 @media (min-width: 1024px) and (max-width: 1160px) {
   .App-Player {
-    transform: scale(0.65);
+    transform: scale(0.95);
   }
 }
 
 @media (min-width: 1161px) and (max-width: 1206px) {
   .App-Player {
-    transform: scale(0.68);
+    transform: scale(0.98);
   }
 }
 
 @media (min-width: 1207px) and (max-width: 1439px) {
   .App-Player {
-    transform: scale(0.6);
+    transform: scale(0.9);
   }
 }
 
 @media (min-width: 1440px) {
   .App-Player {
-    transform: scale(0.6);
+    transform: scale(0.9);
   }
 }
 
@@ -1045,4 +1039,113 @@
   top: 110%;
   width: 19vw;
   height: 9vw;
+}
+
+@media (max-width: 600px) {
+  .dropsContainerNoticias {
+    display: flex;
+    flex-direction: row;
+    border-radius: 24px;
+  }
+
+  .dropsContainer {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    margin-top: 2vw;
+
+
+  }
+
+  .dropsFrontCardContainer {
+
+    margin-right: 0vw;
+  }
+
+  .dropsFrontCardContainerDiv {
+    position: absolute;
+    bottom: 0%;
+    width: auto;
+    background: white;
+    border-top: 0.5vw solid #ffc007;
+    /* Adiciona uma borda amarela de 2px na parte superior */
+    border-radius: 8px;
+    z-index: 4;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
+
+  .dropsImage {
+
+    margin-left: 5.6vw;
+
+  }
+
+  .dropsFrontCardContainerimg {
+    width: 88vw;
+    height: 59.3vw;
+    object-fit: cover;
+    border-top-left-radius: 8px;
+    border-top-right-radius: 8px;
+
+  }
+
+  .dropsFrontcardContainerDivSpan {
+    position: relative;
+    display: flex;
+    flex-direction: column;
+    height: 7vw;
+
+    justify-content: center;
+    width: 88vw;
+  }
+
+
+
+  .dropsRowContainer img {
+    height: 25vw;
+    width: 43.4vw;
+    border-top-left-radius: 8px;
+    border-top-right-radius: 8px;
+    object-fit: cover;
+    overflow: hidden;
+    margin-top: 1vw;
+  }
+
+  .first-row {
+    margin-right: 1vw;
+    margin-bottom: 5.5vw;
+    width: 43.4vw;
+  }
+
+  .dropsColumnContainer span {
+
+    font-size: calc(1.5vw + 0.2vw);
+
+    position: absolute;
+
+    text-align: center;
+    position: absolute;
+    bottom: -14%;
+    z-index: 5;
+    margin-inline: 0.5vw;
+  }
+
+  .dropsFrontCardContainerSpanCartola {
+    height: 2.7vw;
+    font-size: 2.5vw;
+    padding-inline: 1.5vw;
+  }
+
+  .dropsFrontCardContainerSpan {
+    font-size: calc(1.8vw + 0.2vw);
+  }
+
+  .dropsNoArContainer {
+    height: 2vw;
+    font-size: 1.5vw;
+    padding-inline: 1.5vw;
+  }
 }
