--- a/src/NoticiaDetalhe.css
+++ b/src/NoticiaDetalhe.css
@@ -1,13 +1,11 @@
-.MenuContainerHeader {
- 
-}
+.MenuContainerHeader {}
 
 .App-headerN {
     display: flex;
     justify-content: center;
     align-items: center;
     background-color: #541084;
-    padding-top: 4vw;
+    padding-top: 7vw;
 
 }
 
@@ -48,6 +46,128 @@
 
 }
 
+.App-header {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+    padding-top: 4vw;
+}
+
+
+
+.App-header img {
+
+    width: 22vw;
+    height: 11vw;
+    z-index: 22;
+    margin-right: 2vw;
+    left: 4vw;
+    top: 0vw;
+}
+
+.ContainerRow {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+}
+
+.ContainerRow.sidebar-open {
+    flex-direction: column;
+    background: linear-gradient(to bottom, #541084, #8D1B94 70%, transparent 100%);
+    width: 100%;
+    position: absolute;
+    top: -5vw;
+    width: 100%;
+    height: 65vw;
+    z-index: 20;
+    padding-bottom: 15vw;
+}
+
+.ContainerRow.sidebar-open span {
+    color: #FFF;
+    width: 100%;
+    font-size: 5vw;
+    text-shadow: -2px 0 red, 0 2px red, 2px 0 red, 0 -2px red;
+}
+
+.dropsImage.sidebar-open {
+    margin-top: 22vw;
+}
+
+.InnerContainerRow {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: auto;
+    margin-left: 2vw;
+}
+
+.InnerContainerRow.sidebar-open {
+    margin-top: 2vw;
+}
+
+/* Esconde os textos quando a tela for pequena */
+@media (max-width: 600px) {
+    .App-header span {
+        display: none;
+        margin-inline: 0vw;
+    }
+
+    .InnerContainerRow {
+        display: none;
+    }
+
+    .App-header {
+        display: flex;
+
+    }
+
+    .App-header img {
+        width: 40vw;
+        height: 20vw;
+        margin-right: 16vw;
+
+    }
+
+
+}
+
+@media (min-width: 601px) {
+    .ButtonMenu {
+        display: none;
+    }
+}
+
+.ButtonMenu {
+    background: none;
+    border: none;
+    padding: 0;
+}
+
+.App-header.sidebar-open img {
+    width: 40vw;
+    height: 20vw;
+    margin-right: 16vw;
+}
+
+.App-header.sidebar-open .InnerContainerRow {
+    display: flex;
+}
+
+.App-header.sidebar-open {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+    padding-top: 4vw;
+}
+
+/* Mostra os textos em uma coluna quando o menu lateral estiver aberto */
+.App-header.sidebar-open span {
+    display: block;
+}
 
 .App-headerN img {
     position: absolute;
@@ -56,7 +176,7 @@
     z-index: 22;
     margin-right: 2vw;
     left: 4vw;
-    top: 0vw;
+    top: 3vw;
 
 }
 
@@ -98,6 +218,8 @@
     width: auto;
 }
 
+
+
 .noticiasContainer {
     display: flex;
     flex-direction: column;
@@ -105,14 +227,14 @@
     width: 68vw;
     padding: 0 20px;
     padding-left: 6vw;
- 
+
 }
 
 @media (max-width: 329px) {
     .noticiasContainer {
-   
+
         width: 70vw;
-       
+
     }
 }
 
@@ -136,6 +258,18 @@ h2 {
     font-weight: 500;
     line-height: normal;
 }
+
+h3 {
+    color: #541084;
+
+    font-family: 'Rubik', sans-serif;
+    font-size: 4vw;
+    font-style: normal;
+    font-weight: 500;
+    line-height: 1.5px;
+    margin-inline: 5.5vw;
+}
+
 
 .descImage {
     color: #2B2B2B;
@@ -216,4 +350,100 @@ img {
     overflow: hidden;
     width: 100%;
     border-radius: 10px;
+}
+
+.containerDivisao {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 5vw;
+    width: 24vw;
+    margin-top: 5vw;
+    background-color: #541084;
+    border-radius: 24px;
+    padding-inline: 1vw;
+    margin-left: 5vw;
+
+    color: #FFF;
+
+    font-family: 'Rubik', sans-serif;
+    font-size: 3.4vw;
+
+    font-style: normal;
+    font-weight: 700;
+}
+.containerDivisaoP {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 5vw;
+    width: 28vw;
+    margin-top: 5vw;
+    background-color: #541084;
+    border-radius: 24px;
+    padding-inline: 1vw;
+    margin-left: 5vw;
+
+    color: #FFF;
+
+    font-family: 'Rubik', sans-serif;
+    font-size: 3.4vw;
+
+    font-style: normal;
+    font-weight: 700;
+}
+.maisNoticias {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    margin-top: 20px;
+}
+
+.noticia {
+    display: flex;
+    width: 62vw;
+
+    padding: 10px;
+    box-sizing: border-box;
+    margin-left: 3.5vw;
+}
+
+.noticia img {
+    width: 20vw;
+    height: 20vw;
+    object-fit: cover;
+    margin-right: 10px;
+}
+
+.noticia div {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+
+
+}
+
+.noticia h4 {
+    padding-left: 1vw;
+    margin: 1vw 0;
+    font-family: 'Rubik', sans-serif;
+    font-size: 3.4vw;
+    color: #541084;
+    font-style: normal;
+    font-weight: 700;
+}
+
+.noticia h5 {
+    padding-left: 1vw;
+    margin: 1vw 0;
+    font-family: 'Rubik', sans-serif;
+    font-size: 2vw;
+
+    font-style: normal;
+    font-weight: 400;
+}
+
+.noticia a {
+    color: inherit;
+    text-decoration: none;
 }
