--- a/src/NoticiaDetalhe.css
+++ b/src/NoticiaDetalhe.css
@@ -18,12 +18,18 @@
     width: 100%;
     position: relative;
 }
-
 .socialIcons {
     display: flex;
     justify-content: center;
     align-items: center;
     position: absolute;
+    right: 5vw;
+}
+.socialIcons2 {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 2vw;
     right: 5vw;
 }
 
@@ -61,17 +67,12 @@
     width: 22vw;
     height: 11vw;
     z-index: 22;
-    margin-right: 2vw;
+    margin-right: 14vw;
+    margin-left: 5vw;
     left: 4vw;
     top: 0vw;
 }
 
-.ContainerRow {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    width: 100%;
-}
 
 .ContainerRow.sidebar-open {
     flex-direction: column;
@@ -80,20 +81,21 @@
     position: absolute;
     top: -5vw;
     width: 100%;
-    height: 65vw;
+    height: 78vw;
     z-index: 20;
-    padding-bottom: 15vw;
+    padding-bottom: vw;
 }
 
 .ContainerRow.sidebar-open span {
     color: #FFF;
     width: 100%;
     font-size: 5vw;
-    text-shadow: -2px 0 red, 0 2px red, 2px 0 red, 0 -2px red;
+
 }
 
+
 .dropsImage.sidebar-open {
-    margin-top: 22vw;
+    margin-top: 35vw;
 }
 
 .InnerContainerRow {
@@ -102,10 +104,12 @@
     align-items: center;
     width: auto;
     margin-left: 2vw;
+    gap: 1vw;
 }
 
 .InnerContainerRow.sidebar-open {
     margin-top: 2vw;
+    gap: 5vw;
 }
 
 /* Esconde os textos quando a tela for pequena */
@@ -125,9 +129,10 @@
     }
 
     .App-header img {
-        width: 40vw;
-        height: 20vw;
-        margin-right: 16vw;
+        width: 30vw;
+        height: 15vw;
+        margin-right: 44vw;
+        object-fit: cover;
 
     }
 
@@ -147,9 +152,18 @@
 }
 
 .App-header.sidebar-open img {
-    width: 40vw;
-    height: 20vw;
-    margin-right: 16vw;
+    width: 30vw;
+    height: 15vw;
+    margin-right: 0vw;
+    object-fit: cover;
+    padding: 4vw;
+    padding-top: 14vw;
+}
+
+.xSvg {
+    position: absolute;
+    top: 18vw;
+    right: 5vw;
 }
 
 .App-header.sidebar-open .InnerContainerRow {
@@ -167,6 +181,16 @@
 /* Mostra os textos em uma coluna quando o menu lateral estiver aberto */
 .App-header.sidebar-open span {
     display: block;
+
+    color: #FFF;
+    font-family: 'Rubik', sans-serif;
+    font-size: calc(2.25vw + 0.2vw);
+    /* Ajuste conforme necessário */
+    font-style: normal;
+    font-weight: 400;
+    line-height: normal;
+    margin-inline: 1.5vw;
+    margin-bottom: 6vw;
 }
 
 .App-headerN img {
@@ -227,6 +251,10 @@
     width: 68vw;
     padding: 0 20px;
     padding-left: 6vw;
+}
+
+.noticiasContainer img {
+    border-radius: 10px;
 
 }
 
@@ -280,8 +308,10 @@ h3 {
     opacity: 0.8;
 }
 
-img {
-    width: auto;
+
+
+.dropsImage {
+    width: 40vw;
     height: auto;
     border-radius: 10px;
 }
@@ -300,6 +330,12 @@ img {
     font-weight: 400;
     line-height: 107.835%;
     text-decoration-line: none;
+}
+
+.meu-conteudo img {
+    width: auto;
+    height: 42vw;
+    border-radius: 8px;
 }
 
 .meu-conteudo a:hover {
@@ -371,7 +407,9 @@ img {
 
     font-style: normal;
     font-weight: 700;
+    margin-bottom: 7vw;
 }
+
 .containerDivisaoP {
     display: flex;
     justify-content: center;
@@ -391,13 +429,73 @@ img {
 
     font-style: normal;
     font-weight: 700;
+    margin-bottom: 7vw;
 }
+
+.containerDivisaoR {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 5vw;
+    width: 44vw;
+    margin-top: 5vw;
+    background-color: #541084;
+    border-radius: 24px;
+    padding-inline: 1vw;
+    margin-left: 5vw;
+
+    color: #FFF;
+
+    font-family: 'Rubik', sans-serif;
+    font-size: 3.4vw;
+
+    font-style: normal;
+    font-weight: 700;
+}
+
+.containerDivisaoC {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 5vw;
+    width: 44vw;
+    margin-top: 5vw;
+    background-color: #541084;
+    border-radius: 24px;
+    padding-inline: 1vw;
+    margin-left: 5vw;
+
+    color: #FFF;
+
+    font-family: 'Rubik', sans-serif;
+    font-size: 3.4vw;
+
+    font-style: normal;
+    font-weight: 700;
+    margin-bottom: 7vw;
+}
+
 .maisNoticias {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+
+
+}
+
+.maisNoticias img {
+    border-radius: 8px;
+}
+
+
+.maisNoticiasR {
     display: flex;
     flex-direction: column;
     justify-content: space-between;
     margin-top: 20px;
 }
+
+
 
 .noticia {
     display: flex;
@@ -427,7 +525,7 @@ img {
     padding-left: 1vw;
     margin: 1vw 0;
     font-family: 'Rubik', sans-serif;
-    font-size: 3.4vw;
+    font-size: 2.7vw;
     color: #541084;
     font-style: normal;
     font-weight: 700;
@@ -446,4 +544,60 @@ img {
 .noticia a {
     color: inherit;
     text-decoration: none;
+}
+
+.containerColuna1 {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    width: 85%;
+    margin-left: 5vw;
+}
+
+.containerColuna2 {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    width: 85%;
+}
+
+.containerSpanFooter {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+}
+
+.containerSpanFooter h4 {
+
+    margin: 0 0;
+    font-family: 'Rubik', sans-serif;
+    font-size: 2vw;
+    color: #541084;
+    font-style: normal;
+    font-weight: 700;
+    width: 85%;
+}
+
+.containerSpanFooter h5 {
+
+    margin: 0 0;
+    font-family: 'Rubik', sans-serif;
+    font-size: 1.3vw;
+
+    font-style: normal;
+    font-weight: 400;
+    width: 85%;
+    height: 4vw;
+    opacity: 0.8;
+    margin-top: 0.5vw;
+
+}
+
+.containerColuna1 img,
+.containerColuna2 img {
+    width: 31vw;
+    height: 20vw;
+    object-fit: cover;
+    border-radius: 10px;
+    margin-bottom: 0.5vw;
 }
